--- a/src/index.css
+++ b/src/index.css
@@ -16,13 +16,14 @@ body {
 
 .navbar > p {
   font-weight: 500;
-  font-size: 16px;
+  font-size: 19px;
   letter-spacing: -0.02em;
   color: rgba(255, 255, 255, 1);
 }
 
 .navbar > img {
-  height: 24px;
+  height: 29px;
+  width: 29px;
   margin-right: 7px;
 }
 
@@ -105,4 +106,18 @@ a {
 
 hr {
   border: 1px solid #F5F5F5;
+}
+
+.nav--links {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+}
+
+.routes {
+  color: rgba(255, 255, 255, 1);
+  font-size: 14px;
+  letter-spacing: 0.12em;
+  margin: 10px;
+  text-decoration: none;
 }
