--- a/src/index.css
+++ b/src/index.css
@@ -11,20 +11,33 @@ body {
   background: rgba(245, 90, 90, 1);
   display: flex;
   align-items: center;
+  justify-content: space-between;
+}
+
+.navbar--logo {
+  display: flex;
+  align-items: center;
   padding: 0px 40px;
 }
 
-.navbar > p {
+.navbar--logo > p {
   font-weight: 500;
-  font-size: 19px;
+  font-size: 18px;
   letter-spacing: -0.02em;
   color: rgba(255, 255, 255, 1);
 }
 
-.navbar > img {
-  height: 29px;
-  width: 29px;
+.navbar--logo > img {
+  height: 26px;
+  width: 26px;
   margin-right: 7px;
+}
+
+.nav--links {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  margin-right: 40px;
 }
 
 p, body {
@@ -108,12 +121,6 @@ hr {
   border: 1px solid #F5F5F5;
 }
 
-.nav--links {
-  list-style: none;
-  display: flex;
-  flex-direction: row;
-}
-
 .routes {
   color: rgba(255, 255, 255, 1);
   font-size: 14px;
@@ -177,39 +184,4 @@ ul {
 .fa-trash {
   color: red;
   font-size: 1.5em;
-}
-
-.wrapper{
-  width: 380px;
-  background: #fff;
-  border-radius: 15px;
-  box-shadow: 0px 15px 20px rgba(0,0,0,0.1);
-}
-
-.wrapper .title{
-  font-size: 35px;
-  font-weight: 600;
-  text-align: center;
-  line-height: 100px;
-  color: #fff;
-  user-select: none;
-  border-radius: 15px 15px 0 0;
-  background: linear-gradient(-135deg, #c850c0, #4158d0);
-}
-
-.wrapper form .field{
-  height: 50px;
-  width: 100%;
-  margin-top: 20px;
-  position: relative;
-}
-.wrapper form .field input{
-  height: 100%;
-  width: 100%;
-  outline: none;
-  font-size: 17px;
-  padding-left: 20px;
-  border: 1px solid lightgrey;
-  border-radius: 25px;
-  transition: all 0.3s ease;
 }
